--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>ACABA SEMESTRE</title>
-	<meta name="author" content="Marcelo Prates">
+	<meta name="author" content="Marcelo Prates, Adaptado por Lucas Suchy">
 	<meta property="og:image" content="acabasemestre.png" />
 	<meta property="og:title" content="ACABA SEMESTRE" />
-	<meta property="og:description" content="ACABA SEMESTRE OFFICIAL COUNTDOWN" />
-	<link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
+	<meta property="og:description" content="ACABA SEMESTRE COUNTDOWN" />
+	<link rel="stylesheet" type="text/css" media="all" href="css/style.css">
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
