--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:image" content="acabasemestre.png" />
 	<meta property="og:title" content="ACABA SEMESTRE" />
 	<meta property="og:description" content="ACABA SEMESTRE COUNTDOWN" />
-	<link rel="stylesheet" type="text/css" media="all" href="css/style.css">
+	<link rel="stylesheet" type="text/css" media="all" href="css\style.css">
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
