--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="Marcelo Prates, Adaptado por Lucas Suchy">
 	<meta property="og:image" content="acabasemestre.png" />
 	<meta property="og:title" content="ACABA SEMESTRE" />
-	<meta property="og:description" content="ACABA SEMESTRE COUNTDOWN" />
+	<meta property="og:description" content="ACABA SEMESTRE" />
 	<link rel="stylesheet" type="text/css" media="all" href="css\style.css">
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
@@ -183,7 +183,7 @@
 							<tbody>
 								<tr>
 									<td>
-										<h1 style="font-size:300%; padding-top: 0px;"> ACABA SEMESTRE OFFICIAL COUNTDOWN: </h1>
+										<h1 style="font-size:300%; padding-top: 0px;"> ACABA SEMESTRE COUNTDOWN: </h1>
 									</td>
 								</tr>
 							</tbody>
