--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     	$(document).ready(function() 
     	{
-    		document.getElementById('progress').max = Date.dateDiff('s',new Date('March 20, 2019 00:00:00'),new Date('July 20, 2019 23:59:59'));
+    		document.getElementById('progress').max = Date.dateDiff('s',new Date('Feburary 29, 2016 00:00:00'),new Date('July 9, 2016 23:59:59'));
 
+    		/document.getElementById('progress').max = Date.dateDiff('s',new Date('March 20, 2019 00:00:00'),new Date('July 20, 2019 23:59:59'));
+/
     		startTime();
         
         	setTweet(
