--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         function startTime()
         {
         	var today=new Date();
-        	/Aqui a data que acaba
-         	var acaba=new Date("August 5, 2017 23:59:59");/
+        	/Aqui a data que acaba/
 		    var acaba=new Date("July 20, 2019 23:59:59");
 
 			
@@ -61,8 +60,7 @@
 		    var hours=Date.dateDiff('h',today,acaba) % 24;
 		    var minutes=Date.dateDiff('n',today,acaba) % 60;
 		    var seconds=Date.dateDiff('s',today,acaba) % 60;
-		    /Aqui muda a data de inicio
-		    var elapsed_seconds = Date.dateDiff('s',new Date("March 27, 2017 00:00:00"),today);/
+		    /Aqui muda a data de inicio/
 		    var elapsed_seconds = Date.dateDiff('s',new Date("March 20, 2019 00:00:00"),today);
 
 
