Limpeza dos arquivos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		    );
         });
 
-        function setTweet(text)
+        /*function setTweet(text)
         {
 			var myDiv = document.getElementById('tweetStuff');
 
@@ -47,7 +47,7 @@
 
 				twttr.widgets.load();
 			}
-		}
+		}*/
 
         function startTime()
         {
@@ -138,7 +138,7 @@
 		}
 
 	</script>
-
+ 	<!--
 	<script>
 	window.twttr = (function(d, s, id)
 		{
@@ -159,6 +159,7 @@
   			return t;
 		}(document, "script", "twitter-wjs"));
 	</script>
+	-->
 
 </head>
  
